--- a/client/life-goats-app/index.html
+++ b/client/life-goats-app/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <link rel="icon" type="image/svg+xml" href="/life-goats-logo.svg" />
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Catamaran&family=GFS+Neohellenic&family=Lilita+One&family=Luckiest+Guy&family=Neucha&display=swap');
+    </style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Life Goats</title>
   </head>
