Leaflet is working, showing the desired map in Location

--- a/client/life-goats-app/index.html
+++ b/client/life-goats-app/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/life-goats-icon.svg" />
+    <link
+      rel="stylesheet"
+      href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.1.1/mapbox-gl-directions.css"
+      type="text/css"
+    />
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Catamaran&family=GFS+Neohellenic&family=Lilita+One&family=Luckiest+Guy&family=Neucha&display=swap');
     </style>
