--- a/client/life-goats-app/index.html
+++ b/client/life-goats-app/index.html
@@ -9,8 +9,8 @@
       type="text/css"
     />
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Catamaran&family=GFS+Neohellenic&family=Lilita+One&family=Luckiest+Guy&family=Neucha&display=swap');
-    </style>
+      @import url('https://fonts.googleapis.com/css2?family=Catamaran&family=Cinzel:wght@500&family=Lilita+One&family=Luckiest+Guy&family=Neucha&family=Open+Sans:wght@800&family=Road+Rage&family=Rubik:wght@900&display=swap');
+  </style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Life Goats</title>
   </head>
