Enabled smooth scroll and scroll padding in HTML file, adjusted section paddings, fixed error in mobile menu exit animation

--- a/client/life-goats-app/index.html
+++ b/client/life-goats-app/index.html
@@ -10,6 +10,10 @@
     />
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Catamaran&family=Cinzel:wght@500&family=Lilita+One&family=Luckiest+Guy&family=Neucha&family=Open+Sans:wght@800&family=Road+Rage&family=Rubik:wght@900&display=swap');
+      html {
+        scroll-behavior: smooth;
+        scroll-padding-top: 80px;
+      }
   </style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Life Goats</title>
