Fixed performance details &  mobile menu appearing on screen resize, deleted unused images, updated meta tags in HTML file

--- a/client/life-goats-app/index.html
+++ b/client/life-goats-app/index.html
@@ -16,6 +16,8 @@
       }
   </style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="A website that presents a retreat on Mount Olympus, Greece. It showcases the retreat's details and information about the location. Organised by Life Goats." />
+    <meta name="theme-color" content="#e6ecf0" />
     <title>Life Goats</title>
   </head>
   <body>
