Added more SEO details in HTML file, added sitemap

--- a/client/life-goats-app/index.html
+++ b/client/life-goats-app/index.html
@@ -11,12 +11,30 @@
       }
   </style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="A website that presents a retreat on Mount Olympus, Greece. It showcases the retreat's details and information about the location. Organised by Life Goats." />
+    <meta name="description" content="A community and event series for people centered professionals who value relationship building and spending quality time together in the great outdoors." />
     <meta name="theme-color" content="#e6ecf0" />
+    <meta name="keywords" content="Life Goats, outdoor events, community, relationship building, people centered professionals, great outdoors, Mount Olympus" />
+    <meta property="og:title" content="Life Goats: Outdoor Events & Community for Relationship Building" />
+<meta property="og:description" content="Our goal is to help each other press pause on the momentum of daily life, come together, connect, brainstorm, recharge and enjoy reinventing ourselves. As people-centered professionals, our performance depends on that." />
+<meta property="og:image" content="/heard.jpg" />
+<meta property="og:url" content="https://lifegoats.com/" />
+<meta property="og:type" content="website" />
+
     <title>Life Goats</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Life Goats",
+        "url": "https://lifegoats.com/",
+        "logo": "https://lifegoats.com/life-goats-icon.svg",
+        "description": "A community and event series for people centered professionals who value relationship building and spending quality time together in the great outdoors. Our goal is to help each other press pause on the momentum of daily life, come together, connect, brainstorm, recharge and enjoy reinventing ourselves. As people-centered professionals, our performance depends on that."
+      }
+      </script>
+      
   </body>
 </html>
