--- a/client/life-goats-app/index.html
+++ b/client/life-goats-app/index.html
@@ -13,11 +13,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="A community and event series for people centered professionals who value relationship building and spending quality time together in the great outdoors." />
     <meta name="theme-color" content="#e6ecf0" />
-    <meta name="keywords" content="Life Goats, outdoor events, community, relationship building, people centered professionals, great outdoors, Mount Olympus" />
+    <meta name="keywords" content="Life Goats, life goats, outdoor events, community, relationship building, people centered professionals, great outdoors, Mount Olympus" />
     <meta property="og:title" content="Life Goats: A community and event series for people centered professionals who value relationship building and spending quality time together in the great outdoors" />
 <meta property="og:description" content="Our goal is to help each other press pause on the momentum of daily life, come together, connect, brainstorm, recharge and enjoy reinventing ourselves. As people-centered professionals, our performance depends on that." />
-<meta property="og:image" content="/heard.jpg" />
-<meta property="og:url" content="https://lifegoats.com/" />
+<meta property="og:image" content="/herd.JPG" />
+<meta property="og:url" content="https://www.lifegoats.com/" />
 <meta property="og:type" content="website" />
 
     <title>Life Goats</title>
@@ -30,8 +30,8 @@
         "@context": "https://schema.org",
         "@type": "Organization",
         "name": "Life Goats",
-        "url": "https://lifegoats.com/",
-        "logo": "https://lifegoats.com/life-goats-icon.svg",
+        "url": "https://www.lifegoats.com/",
+        "logo": "https://www.lifegoats.com/life-goats-icon.svg",
         "description": "A community and event series for people centered professionals who value relationship building and spending quality time together in the great outdoors. Our goal is to help each other press pause on the momentum of daily life, come together, connect, brainstorm, recharge and enjoy reinventing ourselves. As people-centered professionals, our performance depends on that."
       }
       </script>
