Updated next and map

--- a/client/life-goats-app/index.html
+++ b/client/life-goats-app/index.html
@@ -16,7 +16,7 @@
     <meta name="keywords" content="Life Goats, life goats, outdoor events, community, relationship building, people centered professionals, great outdoors, Mount Olympus" />
     <meta property="og:title" content="Life Goats: A community and event series for people centered professionals who value relationship building and spending quality time together in the great outdoors" />
 <meta property="og:description" content="Our goal is to help each other press pause on the momentum of daily life, come together, connect, brainstorm, recharge and enjoy reinventing ourselves. As people-centered professionals, our performance depends on that." />
-<meta property="og:image" content="/herd.JPG" />
+<meta property="og:image" content="/herd.jpg" />
 <meta property="og:url" content="https://www.lifegoats.com/" />
 <meta property="og:type" content="website" />
 
