--- a/client/life-goats-app/public/newsletters/newsletter-january-2025.html
+++ b/client/life-goats-app/public/newsletters/newsletter-january-2025.html
@@ -234,7 +234,7 @@
     <tbody>
       <tr>
         <td style="font-size:6px; line-height:10px; padding:10px 10px 10px 10px;" valign="top" align="center">
-          <img class="max-width" border="0" style="display:block; color:#000000; text-decoration:none; font-family:Helvetica, arial, sans-serif; font-size:16px; max-width:100% !important; width:100%; height:auto !important;" width="340" alt="" data-proportionally-constrained="true" data-responsive="true" src="http://cdn.mcauto-images-production.sendgrid.net/c813d0d68dd74d92/3c31aacd-0597-48aa-97b0-3558e2092bca/2000x1333.JPG">
+          <img class="max-width" border="0" style="display:block; color:#000000; text-decoration:none; font-family:Helvetica, arial, sans-serif; font-size:16px; max-width:100% !important; width:100%; height:auto !important;" width="340" alt="" data-proportionally-constrained="true" data-responsive="true" src="http://cdn.mcauto-images-production.sendgrid.net/c813d0d68dd74d92/3c31aacd-0597-48aa-97b0-3558e2092bca/2000x1333.jpg">
         </td>
       </tr>
     </tbody>
@@ -296,7 +296,7 @@
     <tbody>
       <tr>
         <td style="font-size:6px; line-height:10px; padding:10px 10px 10px 10px;" valign="top" align="center">
-          <img class="max-width" border="0" style="display:block; color:#000000; text-decoration:none; font-family:Helvetica, arial, sans-serif; font-size:16px; max-width:100% !important; width:100%; height:auto !important;" width="340" alt="" data-proportionally-constrained="true" data-responsive="true" src="http://cdn.mcauto-images-production.sendgrid.net/c813d0d68dd74d92/e14f9bad-6f37-4f73-a807-063cd3f54e69/3000x2000.JPG">
+          <img class="max-width" border="0" style="display:block; color:#000000; text-decoration:none; font-family:Helvetica, arial, sans-serif; font-size:16px; max-width:100% !important; width:100%; height:auto !important;" width="340" alt="" data-proportionally-constrained="true" data-responsive="true" src="http://cdn.mcauto-images-production.sendgrid.net/c813d0d68dd74d92/e14f9bad-6f37-4f73-a807-063cd3f54e69/3000x2000.jpg">
         </td>
       </tr>
     </tbody>
