--- a/client/life-goats-app/public/newsletters/newsletter-march-2025.html
+++ b/client/life-goats-app/public/newsletters/newsletter-march-2025.html
@@ -195,7 +195,7 @@
     <tbody>
       <tr>
         <td style="font-size:6px; line-height:10px; padding:10px 0px 10px 0px;" valign="top" align="center">
-          <img class="max-width" border="0" style="display:block; color:#000000; text-decoration:none; font-family:Helvetica, arial, sans-serif; font-size:16px; max-width:95% !important; width:95%; height:auto !important;" width="665" alt="" data-proportionally-constrained="true" data-responsive="true" src="http://cdn.mcauto-images-production.sendgrid.net/6523d94d69a5d810/54c488b0-76aa-4054-8e1a-6b0b322f242f/3428x1926.JPG">
+          <img class="max-width" border="0" style="display:block; color:#000000; text-decoration:none; font-family:Helvetica, arial, sans-serif; font-size:16px; max-width:95% !important; width:95%; height:auto !important;" width="665" alt="" data-proportionally-constrained="true" data-responsive="true" src="http://cdn.mcauto-images-production.sendgrid.net/6523d94d69a5d810/54c488b0-76aa-4054-8e1a-6b0b322f242f/3428x1926.jpg">
         </td>
       </tr>
     </tbody>
@@ -248,7 +248,7 @@
     <tbody>
       <tr>
         <td style="font-size:6px; line-height:10px; padding:10px 0px 10px 0px;" valign="top" align="center">
-          <img class="max-width" border="0" style="display:block; color:#000000; text-decoration:none; font-family:Helvetica, arial, sans-serif; font-size:16px; max-width:95% !important; width:95%; height:auto !important;" width="665" alt="" data-proportionally-constrained="true" data-responsive="true" src="http://cdn.mcauto-images-production.sendgrid.net/6523d94d69a5d810/d9713837-f10a-44a0-8ddd-1634974403de/1600x1200.JPG">
+          <img class="max-width" border="0" style="display:block; color:#000000; text-decoration:none; font-family:Helvetica, arial, sans-serif; font-size:16px; max-width:95% !important; width:95%; height:auto !important;" width="665" alt="" data-proportionally-constrained="true" data-responsive="true" src="http://cdn.mcauto-images-production.sendgrid.net/6523d94d69a5d810/d9713837-f10a-44a0-8ddd-1634974403de/1600x1200.jpg">
         </td>
       </tr>
     </tbody>
